<resources>
    <string name="app_name">CodeMorse</string>
    <string name="ecrireIci">Ecrire_ici:</string>
    <string name="espace">Espace</string>
    <string name="back_end">Back-end: Marcos</string>
    <string name="front_end">Front-end: Nidhal</string>
    <string name="morse">Morse:</string>
    <string name="But1">.</string>
    <string name="But2">-</string>
    <string name="But3">/</string>
    <string name="jouer">JOUER</string>
    <string name="effacer">EFFACER</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="textviewsortie">textviewSortie</string>
    <string name="textviewentrer">textviewEntrer</string>
    <string name="textviewsort">textViewSortie</string>
    <string name="textviewentr">textViewEntrer</string>
    <string name="alpha">Alpha</string>
    <string name="mors">Morse</string>
</resources>
